# youtube-media-downloader

./: .gitignore  LICENSE  README.md  YouTube Media Downloader.spec  logger.py  main.py  package.py  pyproject.toml
config/: app_version_info.version
youtube/: base.py  playlist.py  video.py
youtube_media_downloader/cli/: main.py
youtube_media_downloader/gui/: config.py  main.py  main_ui.py  workers.py
youtube_media_downloader/gui/static/: gui_theme.xml
youtube_media_downloader/utils/: logger.py
youtube_media_downloader/youtube/: playlist.py  video.py
